<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_bottom_sheet_bg"
    android:paddingHorizontal="20dp"
    android:paddingBottom="20dp"
    android:fitsSystemWindows="false"
    android:clipToPadding="false">

    <ImageView
        android:id="@+id/handle"
        android:layout_width="120dp"
        android:layout_height="5dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_button_bg"
        app:tint="@color/light_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        android:background="@drawable/bg_route_dot"
        android:backgroundTint="@color/light_gray"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_location"
        app:tint="@color/app_color"
        android:id="@+id/icon"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destination_reached"
        app:layout_constraintTop_toBottomOf="@id/icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/bold"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginTop="15dp"
        android:id="@+id/title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_have_arrived_your_destination"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/regular"
        android:textColor="@color/dark_gray"
        android:textSize="16sp"
        android:id="@+id/subTitle"/>

    <TextView
        android:id="@+id/done"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_route_dot"
        android:backgroundTint="@color/nav_color"
        android:fontFamily="@font/semi_bold"
        android:gravity="center"
        android:paddingHorizontal="50dp"
        android:paddingVertical="15dp"
        android:text="@string/done"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>