<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/ic_bottom_sheet_bg"
    android:paddingHorizontal="20dp"
    android:paddingBottom="20dp"
    android:clipToPadding="false">

    <ImageView
        android:id="@+id/handle"
        android:layout_width="120dp"
        android:layout_height="5dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_button_bg"
        app:tint="@color/light_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/departures"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:fontFamily="@font/bold"
        app:layout_constraintTop_toBottomOf="@id/handle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:id="@+id/title"/>

    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        android:background="@drawable/bg_route_dot"
        android:backgroundTint="@color/light_gray"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/title"
        app:layout_constraintBottom_toBottomOf="@id/title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from_canal_view_station"
        android:textColor="@color/dark_gray"
        android:textSize="14sp"
        android:fontFamily="@font/regular"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/subTitle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_previous_departures"
        app:drawableStartCompat="@drawable/ic_up"
        android:drawablePadding="10dp"
        android:fontFamily="@font/medium"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:background="@drawable/ic_button_small_bg"
        android:backgroundTint="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@id/subTitle"
        android:layout_marginTop="10dp"
        android:id="@+id/showNew"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/showNew"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        tools:listitem="@layout/layout_departure_item"
        tools:itemCount="10"/>
</androidx.constraintlayout.widget.ConstraintLayout>