<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_bottom_sheet_bg"
    android:paddingHorizontal="20dp"
    android:paddingBottom="20dp"
    android:fitsSystemWindows="false"
    android:clipToPadding="false">

    <ImageView
        android:id="@+id/handle"
        android:layout_width="120dp"
        android:layout_height="5dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_button_bg"
        app:tint="@color/light_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/canal_view"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:fontFamily="@font/bold"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        app:drawableStartCompat="@drawable/ic_station_marker"
        app:drawableTint="@color/app_color"
        app:layout_constraintTop_toBottomOf="@id/close"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/stationName"/>

    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        android:background="@drawable/bg_route_dot"
        android:backgroundTint="@color/light_gray"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/routeDetailsHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stationName"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/stationsIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stations_no"
            android:textSize="14sp"
            android:fontFamily="@font/medium"
            android:textColor="@color/dark_gray"
            app:drawableStartCompat="@drawable/ic_stations"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toStartOf="@id/stationFloor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/stationFloor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/underground"
            android:textSize="14sp"
            android:fontFamily="@font/medium"
            android:textColor="@color/dark_gray"
            android:layout_marginStart="15dp"
            android:gravity="center_vertical"
            app:drawableStartCompat="@drawable/ic_underground"
            android:drawablePadding="5dp"
            app:layout_constraintStart_toEndOf="@id/stationsIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:drawableStartCompat="@drawable/ic_left"
        app:layout_constraintTop_toBottomOf="@id/routeDetailsHeader"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/startStop"
        android:drawablePadding="20dp"
        android:text="@string/canal_view"
        android:fontFamily="@font/medium"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/routeTimeFromStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_26"
        android:textSize="14sp"
        android:fontFamily="@font/medium"
        android:textColor="@color/dark_gray"
        android:layout_marginTop="10dp"
        app:drawableStartCompat="@drawable/ic_route_time"
        android:drawablePadding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startStop"
        app:layout_constraintEnd_toStartOf="@id/distanceFromStart"/>

    <TextView
        android:id="@+id/distanceFromStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hour_12"
        android:textSize="14sp"
        android:fontFamily="@font/medium"
        android:textColor="@color/dark_gray"
        android:layout_marginStart="10dp"
        app:drawableStartCompat="@drawable/ic_route_distance"
        android:drawablePadding="5dp"
        app:layout_constraintStart_toEndOf="@id/routeTimeFromStart"
        app:layout_constraintTop_toTopOf="@id/routeTimeFromStart"
        app:layout_constraintBottom_toBottomOf="@id/routeTimeFromStart"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:drawableStartCompat="@drawable/ic_right"
        app:layout_constraintTop_toBottomOf="@id/routeTimeFromStart"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/endStop"
        android:drawablePadding="20dp"
        android:text="@string/canal_view"
        android:fontFamily="@font/medium"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/routeTimeFromEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_26"
        android:textSize="14sp"
        android:fontFamily="@font/medium"
        android:textColor="@color/dark_gray"
        android:layout_marginTop="10dp"
        app:drawableStartCompat="@drawable/ic_route_time"
        android:drawablePadding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/endStop"
        app:layout_constraintEnd_toStartOf="@id/distanceFromEnd"/>

    <TextView
        android:id="@+id/distanceFromEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hour_12"
        android:textSize="14sp"
        android:fontFamily="@font/medium"
        android:textColor="@color/dark_gray"
        android:layout_marginStart="10dp"
        app:drawableStartCompat="@drawable/ic_route_distance"
        android:drawablePadding="5dp"
        app:layout_constraintStart_toEndOf="@id/routeTimeFromEnd"
        app:layout_constraintTop_toTopOf="@id/routeTimeFromEnd"
        app:layout_constraintBottom_toBottomOf="@id/routeTimeFromEnd"/>

    <TextView
        android:id="@+id/start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_route_dot"
        android:backgroundTint="@color/nav_color"
        android:fontFamily="@font/semi_bold"
        android:gravity="center"
        android:paddingHorizontal="50dp"
        android:paddingVertical="15dp"
        android:text="@string/add_to_trip"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/routeTimeFromEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>